support arguments without debug name